--- a/branches/p_130510_html5_OR/ext/resources/css/base.css
+++ b/branches/p_130510_html5_OR/ext/resources/css/base.css
@@ -14,11 +14,18 @@ table{width:100%;border-collapse:collapse;border-spacing:0}
 .x-body{font-family:NanumGothic,'나눔고딕',MalgunGothic,'맑은고딕',Dotum,'돋움',Gulim,'굴림',AppleGothic,Helvetica,sans-serif;font-size:14px}
 a.x-tree-node-text{color:#2600f0}
 
+/*
+::-webkit-scrollbar{width:8px;height:8px}
+::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment{display:block;height:2px}
+::-webkit-scrollbar-track{background-color:#fff;border-radius:5px;box-shadow:inset 0 0 4px rgba(0,0,0,.2)}
+::-webkit-scrollbar-thumb{height:50px;width:50px;background:rgba(0,0,0,.2);border-radius:5px;box-shadow:inset 0 0 4px rgba(0,0,0,.1)} */
+
 /* =Set Class */
 .blind{visibility:hidden;overflow:hidden;position:absolute;z-index:-1;width:0;height:0;font-size:0;line-height:0}
 
 /* =Syntaxhighlighter */
 .syntaxhighlighter{margin:0 !important}
+.syntaxhighlighter.code{overflow-y:hidden !important}
 
 /* =Content Flow */
 .svg text{position:absolute;top:0;left:-10000em;font-size:10px;font-family:arial;color:#fff;fill:#000;opacity:.5}
@@ -53,6 +60,7 @@ a.x-tree-node-text{color:#2600f0}
 #content_desc .category dd{margin:0}
 #content_desc .category li{line-height:1.8}
 #content_desc .api_ist li{line-height:1.6}
+#content_desc .lst_type li{line-height:1.6}
 
 /* =Refer */
 #refer{padding:0 10px}
