--- a/branches/p_130510_html5_OR/ext/resources/css/base.css
+++ b/branches/p_130510_html5_OR/ext/resources/css/base.css
@@ -25,6 +25,9 @@ a.x-tree-node-text{color:#2600f0}
 
 /* =Syntaxhighlighter */
 .syntaxhighlighter{margin:0 !important}
+.syntaxhighlighter::-webkit-scrollbar{width:8px;height:8px}
+.syntaxhighlighter::-webkit-scrollbar-track{background-color:#eee;box-shadow:inset 0 0 4px rgba(0,0,0,.2)}
+.syntaxhighlighter::-webkit-scrollbar-thumb{background:rgba(0,0,0,.2);box-shadow:inset 0 0 4px rgba(0,0,0,.1)}
 .syntaxhighlighter.code{overflow-y:hidden !important}
 
 /* =Content Flow */
