* php 코드 추가 Attributes[R~T] T:2/3

--- a/branches/p_130510_html5_OR/ext/resources/css/base.css
+++ b/branches/p_130510_html5_OR/ext/resources/css/base.css
@@ -63,6 +63,7 @@ pre[class^=brush]{display:none}
 #content_desc .category dt{font-weight:bold}
 #content_desc .category dd{margin:0}
 #content_desc .category li{line-height:1.8}
+#content_desc .category.v1 dd{margin-top:15px;line-height:1.6}
 #content_desc .api_ist li{line-height:1.6}
 #content_desc .lst_type li{line-height:1.6}
 
