* 마크업 코딩 컨벤션 [HTML Guide]

--- a/branches/p_130510_html5_OR/ext/resources/css/base.css
+++ b/branches/p_130510_html5_OR/ext/resources/css/base.css
@@ -49,7 +49,8 @@ pre[class^=brush]{display:none}
 /* =Index Summary */
 .idx_summary{position:relative;margin-bottom:30px;background-color:#f7f7f7;border-top:1px solid #333}
 .idx_summary .inner{padding:10px 0;border:1px solid #333;border-width:0 1px 1px}
-.idx_summary a{text-decoration:none}
+.idx_summary a{text-decoration:none;border-radius:0 0 5px 5px}
+.idx_summary a.btn_lst:hover,.idx_summary a.btn_lst:focus{color:#f60 !important}
 .idx_summary a.btn_lst{position:absolute;left:50%;width:84px;margin-left:-42px;padding:0 0 2px;border:1px solid #333;border-top-width:0;font-size:12px;color:#666 !important;text-align:center}
 .idx_summary a.btn_lst.view{top:-1px;background-color:#fff}
 .idx_summary a.btn_lst.clse{bottom:-16px;background-color:#f7f7f7}
@@ -68,6 +69,7 @@ pre[class^=brush]{display:none}
 #content_desc .panel.info{border-color:#c8c8c8;background-color:#f7f7f7;color:#555}
 #content_desc .panel.alert{border-color:#d4a9a9;background-color:#f5dede;color:#6a1e00}
 #content_desc .tit_cont{color:#0a63c1}
+#content_desc .tit_ipt{color:#3a6399}
 #content_desc .definition{padding:15px;background-color:#eef;border-radius:10px}
 #content_desc .definition dt{font-weight:bold;color:#137ca5}
 #content_desc .definition dd{margin:5px 0 0 10px;line-height:1.6}
