--- a/branches/p_130510_html5_OR/ext/resources/css/base.css
+++ b/branches/p_130510_html5_OR/ext/resources/css/base.css
@@ -11,6 +11,7 @@ table{width:100%;border-collapse:collapse;border-spacing:0}
 */
 
 /* =Common */
+abbr{border-bottom:1px dotted #666}
 .x-body{font-family:NanumGothic,'나눔고딕',MalgunGothic,'맑은고딕',Dotum,'돋움',Gulim,'굴림',AppleGothic,Helvetica,sans-serif;font-size:14px}
 a.x-tree-node-text{color:#2600f0}
 
@@ -66,8 +67,9 @@ pre[class^=brush]{display:none}
 #content_desc .s_tit{margin-top:30px;padding-left:8px;font-weight:bold;font-size:18px;color:#081f5c;border-left:5px solid #06a}/*#081f5c*/
 #content_desc .s_tit:first-child{margin-top:0}
 #content_desc .panel{margin:8px 0;padding:10px;border:1px dotted #000}
-#content_desc .panel.info{border-color:#c8c8c8;background-color:#f7f7f7;color:#555}
+#content_desc .panel.info{border-color:#c8c8c8;background-color:#f7f7f7;color:#555;line-height:1.4}
 #content_desc .panel.alert{border-color:#d4a9a9;background-color:#f5dede;color:#6a1e00}
+#content_desc .panel .lst_type{margin:0}
 #content_desc .tit_cont{color:#0a63c1}
 #content_desc .tit_ipt{color:#3a6399}
 #content_desc .definition{padding:15px;background-color:#eef;border-radius:10px}
@@ -76,17 +78,17 @@ pre[class^=brush]{display:none}
 #content_desc .markup_rule{}
 #content_desc .markup_rule li{line-height:1.8}
 #content_desc .tb_grid{border-spacing:0;border-collapse:collapse}
-#content_desc .tb_grid caption{padding-bottom:5px}
+#content_desc .tb_grid caption{padding:0 0 5px 5px;color:#049bc9;text-align:left}
 #content_desc .tb_grid caption.blind{visibility:hidden;overflow:hidden;width:0;height:0;font-size:0;line-height:0}
 #content_desc .tb_grid th,#content_desc .tb_grid td{padding:5px 15px;border:1px solid #ccc}
 #content_desc .tb_grid th{background-color:#eee}
-#content_desc .tb_grid td{background-color:#f7f7f7}
+#content_desc .tb_grid td{background-color:#fcfcfc}
 #content_desc .category dt{font-weight:bold}
 #content_desc .category dd{margin:0}
 #content_desc .category li{line-height:1.8}
 #content_desc .category.v1 dd{margin-top:15px;line-height:1.6}
 #content_desc .category.v2 dt{margin-top:4px}
-#content_desc .category.v2 dd{padding:2px 0 2px 10px}
+#content_desc .category.v2 dd{padding:2px 0 2px 10px;line-height:1.4}
 #content_desc .api_ist li{line-height:1.6}
 #content_desc .lst_type li{line-height:1.6}
 
