--- a/branches/p_130510_html5_OR/ext/resources/css/base.css
+++ b/branches/p_130510_html5_OR/ext/resources/css/base.css
@@ -77,7 +77,7 @@ pre[class^=brush]{display:none}
 #content_desc .definition dd{margin:5px 0 0 10px;line-height:1.6}
 #content_desc .markup_rule{}
 #content_desc .markup_rule li{line-height:1.8}
-#content_desc .tb_grid{border-spacing:0;border-collapse:collapse}
+#content_desc .tb_grid{table-layout:fixed;border-spacing:0;border-collapse:collapse}
 #content_desc .tb_grid caption{padding:0 0 5px 5px;color:#049bc9;text-align:left}
 #content_desc .tb_grid caption.blind{visibility:hidden;overflow:hidden;width:0;height:0;font-size:0;line-height:0}
 #content_desc .tb_grid th,#content_desc .tb_grid td{padding:5px 15px;border:1px solid #ccc;vertical-align:top}
